<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Client TA</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="nav_update">Обновление</string>
    <string name="main">Вернуться к списку клиентов</string>
    <string name="btn_create_pko">Сохранить</string>
    <string name="btnPKO">ПРИХОДНЫЙ КАССОВЫЙ ОРДЕР</string>
    <string name="id">Id</string>
    <string name="nameKlient">Name</string>
    <string name="todo">TODO</string>
</resources>