<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:padding="6dip">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="6dip"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/klient_id"
            android:layout_width="fill_parent"
            android:layout_height="26dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/icon"
            android:ellipsize="marquee"
            android:text="@string/id"
            android:textColor="@color/mainColor"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/klient_name"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_above="@id/klient_id"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toRightOf="@id/icon"
            android:gravity="center_vertical"
            android:text="@string/nameKlient"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>
</android.support.v7.widget.CardView>